Upd(profile): add edit mode to retrieve profile data for editing
